# tg-util

./: .gitignore  README.md  example.yaml  pyproject.toml
tg_util/: downloader.py  exporter.py
tg_util/src/: __init__.py  config.py  input.py  log.py  sheet.py  utils.py
tg_util/src/arc/: __init__.py  base.py  factory.py  mysql.py  mysqlx.py  pg.py  psql.py  sqlite.py
tg_util/src/tg/: utils.py  utils.pyi
tg_util/src/tg/messages/: element.py  export.py  extended.py  wrapper.py
tg_util/src/tg/sessions/: custom.py  factory.py  mysql.py  mysqlx.py  pg.py
tg_util/src/types/: __init__.py  _abc.py  args.py  enums.py  errors.py  structs.py  tqdm.py  tqdm.pyi
tg_util/src/utils/: __init__.py  aio.py  aiohelper.py  func.py  helper.py
