[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tg-util"
maintainers = [{ name = "unhealme", email = "o2tongpethuk@gmail.com" }]
version = "0.1.16-0"
description = "telegram utilities for personal use case"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=24.1.0",
    "msgspec[yaml]>=0.19.0",
    "pillow>=11.2.1",
    "python-socks[asyncio]>=2.7.1",
    "tabulate>=0.9.0",
    "telethon[cryptg]>=1.40.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
mysql = ["mysqlx-connector-python>=9.3.0"]
perf = ["uvloop>=0.21.0"]
pg = ["asyncpg>=0.30.0"]

[dependency-groups]
dev = ["asyncpg-stubs>=0.30.1", "ruff>=0.11.8", "types-pillow>=10.2.0.20240822"]

[project.urls]
Repository = "https://github.com/unhealme/tg-util"

[project.scripts]
tg-dl = "tg_util.downloader:__main__"
tg-exp = "tg_util.exporter:__main__"
