[build-system]
requires = ["uv_build>=0.9.2,<0.10.0"]
build-backend = "uv_build"

[project]
name = "tg-util"
version = "0.1.19"
maintainers = [{ name = "unhealme", email = "o2tongpethuk@gmail.com" }]
description = "telegram utilities for personal use case"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles",
    "msgspec[yaml]",
    "pillow",
    "python-socks[asyncio]",
    "tabulate",
    "telethon[cryptg]",
    "tqdm",
]

[project.optional-dependencies]
mysql = ["mysqlx-connector-python"]
perf = ["uvloop"]
pg = ["asyncpg"]

[dependency-groups]
dev = [
    "asyncpg",
    "asyncpg-stubs",
    "mysqlx-connector-python",
    "ruff",
    "types-pillow",
]

[tool.uv.build-backend]
module-root = ""

[project.urls]
Repository = "https://github.com/unhealme/tg-util"

[project.scripts]
tg-dl = "tg_util.downloader:__main__"
tg-exp = "tg_util.exporter:__main__"
